@@ -501,11 +501,6 @@
 # define __ASSUME_ADJ_OFFSET_SS_READ	1
 #endif
 
-/* Support for AT_EXECFN was added in 2.6.27.  */
-#if __LINUX_KERNEL_VERSION >= 0x02061b
-# define __ASSUME_AT_EXECFN	1
-#endif
-
 /* Support for various CLOEXEC and NONBLOCK flags was added for x86,
    x86-64, PPC, IA-64, and SPARC in 2.6.27.  */
 #if __LINUX_KERNEL_VERSION >= 0x02061b \
